--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -5,7 +5,7 @@ plugins:
   - serverless-webpack
   - serverless-iam-roles-per-function
   # - serverless-reqvalidator-plugin
-  - serverless-aws-documentation
+  # - serverless-aws-documentation
 
 provider:
   name: aws
@@ -14,72 +14,75 @@ provider:
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-1'}
 
+  # deploymentBucket:
+  #   name: com.serverless.${self:provider.region}.deploys
+
   environment:
     TODOS_TABLE: Todos-${self:provider.stage}
-    # IMAGES_TABLE: Images-${self:provider.stage}
+    IMAGES_TABLE: Images-${self:provider.stage}
     # IMAGE_ID_INDEX: ImageIdIndex
-    IMAGES_S3_BUCKET: serverless-todo-images-${self:provider.stage}
+    IMAGES_S3_BUCKET: serverless-todo-app-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300 # Presigned URL expiration time in seconds
     INDEX_TODO: Index-todo-${self:provider.stage}
-    CONNECTIONS_TABLE: Connections-${self:provider.stage}
+    S3_SIGN_URL_ACCESS: $S3_SIGN_URL_ACCESS
+    S3_SIGN_URL_SECRET: $S3_SIGN_URL_SECRET
+    # CONNECTIONS_TABLE: Connections-${self:provider.stage}
     # AUTH0_SECRET: rn30fTpHrpWc24BqK3I3UAELVavmTOVzNkV1Vw9aKIWZEXU97dJ0xIFbCl0wHfPM
 
-  # iamRoleStatements:
-  #   - Effect: Allow
-  #     Action:
-  #       - dynamodb:Scan
-  #       - dynamodb:PutItem
-  #       - dynamodb:Query
-  #     Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
-custom:
-  topicName: imagesTopic-${self:provider.stage}
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+        - dynamodb:PutItem
+        - dynamodb:GetItem
+        - dynamodb:DeleteItem
+      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+        - dynamodb:Query
+      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}
+    # - Effect: Allow
+    #   Action:
+    #     - s3:PutObject
+    #     - s3:GetObject
+    #   Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
+
+# custom:
+#   topicName: imagesTopic-${self:provider.stage}
 
 functions:
   Auth:
     handler: src/lambda/auth/auth0Authorizer.handler
 
-  ConnectHandler:
-    handler: src/lambda/websocket/connect.handler
-    events:
-      - websocket:
-          route: $connect
-    iamRoleStatementsInherit: true
-    iamRoleStatements:
-      - Effect: Allow
-        Action:
-          - dynamodb:PutItem
-          - dynamodb:DeleteItem
-        Resource: arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CONNECTIONS_TABLE}
+  # ConnectHandler:
+  #   handler: src/lambda/websocket/connect.handler
+  #   events:
+  #     - websocket:
+  #         route: $connect
+  #   iamRoleStatementsInherit: true
+  #   iamRoleStatements:
+  #     - Effect: Allow
+  #       Action:
+  #         - dynamodb:PutItem
+  #         - dynamodb:DeleteItem
+  #       Resource: arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CONNECTIONS_TABLE}
 
-  DisconnectHandler:
-    handler: src/lambda/websocket/disconnect.handler
-    events:
-      - websocket:
-          route: $disconnect
-    iamRoleStatementsInherit: true
-    iamRoleStatements:
-      - Effect: Allow
-        Action:
-          - dynamodb:PutItem
-          - dynamodb:DeleteItem
-        Resource: arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CONNECTIONS_TABLE}
+  # DisconnectHandler:
+  #   handler: src/lambda/websocket/disconnect.handler
+  #   events:
+  #     - websocket:
+  #         route: $disconnect
+  #   iamRoleStatementsInherit: true
+  #   iamRoleStatements:
+  #     - Effect: Allow
+  #       Action:
+  #         - dynamodb:PutItem
+  #         - dynamodb:DeleteItem
+  #       Resource: arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CONNECTIONS_TABLE}
 
-  SendUploadNotifications:
-    environment:
-      STAGE: ${self:provider.stage}
-      API_ID:
-        Ref: WebsocketsApi
-    handler: src/lambda/s3/sendNotifications.handler
-    events:
-      - sns:
-          arn:
-            Fn::Join:
-              - ":"
-              - - arn:aws:sns
-                - Ref: AWS::Region
-                - Ref: AWS::AccountId
-                - ${self:custom.topicName}
-          topicName: ${self:custom.topicName}
+  # SendUploadNotifications:
+  #   handler: src/lambda/s3/sendNotifications.handler
   # TODO: Configure this function
   GetTodos:
     handler: src/lambda/http/getTodos.handler
@@ -95,10 +98,10 @@ functions:
         Action:
           - dynamodb:Query
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
-      - Effect: Allow
-        Action:
-          - dynamodb:Query
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/index/${self:provider.environment.INDEX_TODO}
+      # - Effect: Allow
+      #   Action:
+      #     - dynamodb:Query
+      #   Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/index/${self:provider.environment.INDEX_TODO}
 
   # TODO: Configure this function
   CreateTodo:
@@ -131,6 +134,7 @@ functions:
       - Effect: Allow
         Action:
           - dynamodb:PutItem
+          - dynamodb:UpdateItem
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
   # TODO: Configure this function
   DeleteTodo:
@@ -148,6 +152,11 @@ functions:
         Action:
           - dynamodb:DeleteItem
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+      - Effect: Allow
+        Action:
+          - s3:GetObject
+          - s3:DeleteObject
+        Resource: arn:aws:s3:::{self:provider.environment.IMAGES_S3_BUCKET}
   # TODO: Configure this function
   GenerateUploadUrl:
     handler: src/lambda/http/generateUploadUrl.handler
@@ -166,7 +175,8 @@ functions:
       - Effect: Allow
         Action:
           - s3:PutObject
-        Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET} # s3:::(three colons)${}
+          - s3:GetObject
+        Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/* # s3:::(three colons)${}, and dont forget the /* at the end
 resources:
   Resources:
     # Auth, creating headers for cors
@@ -174,7 +184,6 @@ resources:
       Type: "AWS::ApiGateway::GatewayResponse"
       Properties:
         ResponseParameters:
-          # typo in the lesson ?
           gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
           gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization'"
           gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST,PATCH,DELETE'"
@@ -186,112 +195,89 @@ resources:
       Type: AWS::DynamoDB::Table
       Properties:
         AttributeDefinitions:
-          - AttributeName: userId #partitionKey
+          - AttributeName: userId
             AttributeType: S
-          - AttributeName: todoId
-            AttributeType: S
+          # - AttributeName: createdAt
+          #   AttributeType: S
           # - AttributeName: attachmentUrl #indexKey
           #   AttributeType: S
-          - AttributeName: dueDate # sort key. Needs to be RANGE in keySchema
+          # - AttributeName: dueDate
+          #   AttributeType: S
+          - AttributeName: todoId
             AttributeType: S
         KeySchema:
-          - AttributeName: userId
+          - AttributeName: userId # partition key
             KeyType: HASH
-          - AttributeName: dueDate
+          - AttributeName: todoId # sort key. Needs to be RANGE in keySchema
             KeyType: RANGE
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.TODOS_TABLE}
-        LocalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.INDEX_TODO}
-            KeySchema:
-              - AttributeName: userId #partitionKey
-                KeyType: HASH
-              - AttributeName: todoId #indexKey
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
-
-    ConnectionsTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        AttributeDefinitions:
-          - AttributeName: id #partitionKey
-            AttributeType: S
-          - AttributeName: timestamp
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-          - AttributeName: timestamp
-            KeyType: RANGE
-        BillingMode: PAY_PER_REQUEST
-        TableName: ${self:provider.environment.CONNECTIONS_TABLE}
-
-    ImagesBucket:
-      Type: AWS::S3::Bucket
-      DependsOn: SNSTopicPolicy
-      Properties:
-        BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
-        NotificationConfiguration:
-          TopicConfigurations:
-            - Event: s3:ObjectCreated:Put
-              Topic: !Ref ImagesTopic
-        CorsConfiguration:
-          CorsRules:
-            - AllowedOrigins:
-                - "*"
-              AllowedHeaders:
-                - "*"
-              AllowedMethods:
-                - GET
-                - PUT
-                - POST
-                - DELETE
-                - HEAD
-              MaxAge: 3000
-
-    SNSTopicPolicy:
-      Type: AWS::SNS::TopicPolicy
-      Properties:
-        PolicyDocument:
-          Version: "2012-10-17"
-          Statement:
-            - Effect: Allow
-              Principal:
-                AWS: "*"
-              Action: sns:Publish
-              Resource: !Ref ImagesTopic
-              Condition:
-                ArnLike:
-                  AWS:SourceArn: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}
-        Topics:
-          - !Ref ImagesTopic
-
-    ImagesTopic:
-      Type: AWS::SNS::Topic
-      Properties:
-        DisplayName: Image bucket topic
-        TopicName: ${self:custom.topicName}
-
-    BucketPolicy:
-      Type: AWS::S3::BucketPolicy
-      Properties:
-        PolicyDocument:
-          Id: MyPolicy
-          Version: "2012-10-17"
-          Statement:
-            - Sid: PublicReadForGetBucketObjects
-              Effect: Allow
-              Principal: "*"
-              Action: "s3:GetObject"
-              Resource: "arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*"
-        Bucket: !Ref ImagesBucket
-
-    SendUploadNotificationsPermission:
-      Type: AWS::Lambda::Permission
-      Properties:
-        FunctionName: !Ref SendUploadNotificationsLambdaFunction
-        Principal: s3.amazonaws.com
-        Action: lambda:InvokeFunction
-        SourceAccount: !Ref AWS::AccountId
-        SourceArn: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}
+        # LocalSecondaryIndexes:
+        #   - IndexName: ${self:provider.environment.INDEX_TODO}
+        #     KeySchema:
+        #       - AttributeName: userId #partitionKey
+        #         KeyType: HASH
+        #       - AttributeName: todoId #indexKey
+        #         KeyType: RANGE
+        #     Projection:
+        #       # NonKeyAttributes: ["todoId"]
+        #       ProjectionType: ALL
+    # ConnectionsTable:
+    #   Type: AWS::DynamoDB::Table
+    #   Properties:
+    #     AttributeDefinitions:
+    #       - AttributeName: id #partitionKey
+    #         AttributeType: S
+    #       - AttributeName: timestamp
+    #         AttributeType: S
+    #     KeySchema:
+    #       - AttributeName: id
+    #         KeyType: HASH
+    #       - AttributeName: timestamp
+    #         KeyType: RANGE
+    #     BillingMode: PAY_PER_REQUEST
+    #     TableName: ${self:provider.environment.CONNECTIONS_TABLE}
+    # ImagesBucket:
+    #   Type: AWS::S3::Bucket
+    #   Properties:
+    #     AccessControl: PublicRead
+    #     BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
+    #     # NotificationConfiguration:
+    #     #   LambdaConfigurations:
+    #     #     - Event: s3:ObjectCreated:*
+    #     #       Functions: !GetAtt SendUploadNotificationsLambdaFunction.Arn
+    #     CorsConfiguration:
+    #       CorsRules:
+    #         - AllowedOrigins:
+    #             - "*"
+    #           AllowedHeaders:
+    #             - "*"
+    #           AllowedMethods:
+    #             - GET
+    #               PUT
+    #               POST
+    #               DELETE
+    #               HEAD
+    #           MaxAge: 3000
+    # BucketPolicy:
+    #   Type: AWS::S3::BucketPolicy
+    #   Properties:
+    #     PolicyDocument:
+    #       Id: MyPolicy
+    #       Version: "2012-10-17"
+    #       Statement:
+    #         - Sid: PublicReadForGetBucketObjects
+    #           Effect: Allow
+    #           Principal: "*"
+    #           Action: "s3:GetObject"
+    #           Resource: "arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*"
+    #     Bucket:
+    #       Ref: ImagesBucket
+    # SendUploadNotificationsPermission:
+    #   Type: AWS::Lambda::Permission
+    #   Properties:
+    #     FunctionName: SendUploadNotifications
+    #     Principal: s3.amazonaws.com
+    #     Action: lambda:InvokeFunction
+    #     SourceAccount: !Ref AWS::AccountId
+    #     SourceArn: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}
