--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "typescript-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://frank3stein.github.io/serverless",
   "dependencies": {
     "axios": "^0.18.1",
     "dateformat": "^3.0.3",
@@ -24,13 +25,16 @@
     "@types/react-router-dom": "^4.3.5",
     "@types/styled-components": "^4.1.19",
     "auth0-js": "^9.11.3",
+    "gh-pages": "^2.1.1",
     "typescript": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
