--- a/backend/package.json
+++ b/backend/package.json
@@ -4,29 +4,34 @@
   "description": "Serverless TODO image app",
   "dependencies": {
     "@types/axios": "^0.14.0",
-    "@types/http-errors": "^1.6.2",
-    "aws-xray-sdk": "^2.4.0",
-    "axios": "^0.19.0",
+    "@types/http-errors": "^1.6.3",
+    "aws-xray-sdk": "^2.5.0",
+    "axios": "^0.19.1",
+    "express": "^4.17.1",
     "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.1",
     "middy": "^0.27.1",
-    "source-map-support": "^0.5.13",
+    "serverless": "^1.60.5",
+    "serverless-http": "^2.3.0",
+    "serverless-plugin-warmup": "^4.7.1-rc.1",
+    "source-map-support": "^0.5.16",
     "uuid": "^3.3.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.33",
+    "@types/aws-lambda": "^8.10.39",
     "@types/jsonwebtoken": "^8.3.5",
-    "@types/node": "^10.14.22",
-    "aws-sdk": "^2.553.0",
+    "@types/node": "^10.17.13",
+    "aws-sdk": "^2.600.0",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-iam-roles-per-function": "^1.0.4",
+    "serverless-offline": "^5.12.1",
     "serverless-plugin-canary-deployments": "^0.4.8",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.3.1",
     "ts-loader": "^5.4.5",
-    "typescript": "^3.6.4",
-    "webpack": "^4.41.2"
+    "typescript": "^3.7.4",
+    "webpack": "^4.41.5"
   },
   "author": "Ivan Mushketyk",
   "license": "MIT"
