--- a/backend/package.json
+++ b/backend/package.json
@@ -27,12 +27,11 @@
     "serverless-iam-roles-per-function": "^1.0.4",
     "serverless-offline": "^5.12.1",
     "serverless-plugin-canary-deployments": "^0.4.8",
-    "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.3.1",
     "ts-loader": "^5.4.5",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5"
   },
-  "author": "Ivan Mushketyk",
+  "author": "Emil Martinov",
   "license": "MIT"
 }
